# code_example

./: .gitignore  .gitmodules  README.md
cmake/: README.md
cmake/demo0/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/demo1/: CMakeCache.txt  CMakeLists.txt  HelloConfig.h  HelloConfig.h.in  Makefile  cmake_install.cmake  demo  hello.cc  hello.h  main.cc
cmake/demo2/src/: CMakeLists.txt  main.cc
cmake/demo2/src/math_func/: CMakeLists.txt  my_sqrt.cc
cmake/demo2_2/src/: CMakeLists.txt  demo_config.h.in  main.cc
cmake/demo2_2/src/math_func/: math_func.h  my_sqrt.cc
cmake/demo3/src/: CMakeLists.txt
cmake/demo3/src/math_func/: CMakeLists.txt
cmake/demo3_2/src/: CMakeLists.txt  main.cc
cmake/demo3_2/src/math_func/: CMakeLists.txt  math_func.h
cmake/demo4/: README.MD
cmake/demo4/lib/: CMakeLists.txt  a.cpp  a.h
cmake/demo4/src/: CMakeLists.txt  demo.cpp
cmake/demo4_2/: README.MD  run.sh
cmake/demo4_2/include/test1/: test1.h
cmake/demo4_2/lib/: CMakeLists.txt  a.cpp
cmake/demo4_2/src/: CMakeLists.txt  demo.cpp
lib_fmt/: CMakeLists.txt  main.cpp
lib_parse_json/1_nlohmann_json/: CMakeLists.txt  main.cpp
lib_parse_json/2_rapidjson/: CMakeLists.txt  README.md  main.cpp
lib_parse_json/demo1_nlohmann_json/: README.md  run.sh
lib_uwebsockets/: Makefile  README.md  demo-out-bytes.cpp  demo.cpp  run.sh  test_camera.cpp  test_char_0.cpp  test_opencv_uws.cpp  test_send_images.cpp
lib_uwebsockets/client/: client.html  client.py  client_base64.py
lib_uwebsockets/res/: README.md
mixed_code/1_pybind/: README.md
mixed_code/1_pybind/base/: CMakeLists.txt
mixed_code/1_pybind/base2/: CMakeLists.txt  README.md
mixed_code/1_pybind/base3/: CMakeLists.txt  test.py
mixed_code/1_pybind/base4/: CMakeLists.txt
mixed_code/1_pybind/demo2/: cal.py  demo.cpp
mixed_code/2_swig/: README.md  example.cpp  run.sh  setup.py  test.py
pybind/base/: README.md  demo.cpp  test.py
pybind/base3/: README.md  demo.cpp  demo_1.cpp
pybind/base4/: README.md  demo.cpp  test.py
tools/tool-microprofile/: CMakeLists.txt  README.md
web/: README.md
web/dev_fastapi/: README.md  demo1.py  demo11.py  demo12.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9-2.py  demo9.py  demo_minio1.py  demo_minio3.py  demo_minio5.py  demo_minio_local1.py  demo_minio_local2.py  demo_minio_local3.py  demo_mongo1.py  demo_mongo2.py  demo_mongo4.py  demo_mongo5.py  demo_mongo6.py  demo_mongo7.md  demo_pydantic1.py  demo_pydantic2.py  demo_pydantic3.py  demo_python1.py  script_create_mongodb.sh  tmp.json
web/dev_fastapi/demo0/: main.py  readme.md
web/dev_fastapi/demo0/x1/: c1.py
web/dev_fastapi/demo0/x1/y1/: a1.py  a2.py
web/dev_fastapi/demo0/x1/y2/: b1.py
web/dev_fastapi/demo10/sql_app/: sql_app.db
web/dev_fastapi/demo_casbin/: demo_casbin1.py  demo_casbin2.py
web/dev_fastapi/template/: Dockerfile  README.md  docker-compose.yml  requirements.txt  run.sh  run_single.sh
web/dev_fastapi/template/app/: main.py
web/dev_fastapi/template/app/config/: __init__.py  conf.py  conf.yaml
web/dev_fastapi/template/app/model/schemas/: base_model.py  user.py
web/dev_fastapi/template/app/routers/: user.py
web/dev_fastapi/template/app/tools/: script_create_minio.sh  script_create_mongodb.sh
web/dev_fastapi/template/app/utils/: database.py  error.py  minio.py  utils.py
web/dev_fastapi/template/test/: test_user.py  xtest_user.py  xxtest_user.py
web/dev_fastapi/template/tools/: init_mongo.sh  script_create_minio.sh  script_create_mongodb.sh
web/dev_minio/: demo_minio2.py  demo_minio4.py
web/dev_mongodb/: demo_mongo2.py  demo_mongo3.py  demo_mongo4.py  demo_mongo7.py
web/dev_rabbitmq/: demo_rabbitmq_node_receiver.js  demo_rabbitmq_node_sender.js  demo_rabbitmq_python_receiver.py  demo_rabbitmq_python_sender.py
